# VulkanEngine

./: .clang-format  .gitignore  CMakeLists.txt  build.sh
shaders/: ui.frag  ui.vert
src/: CMakeLists.txt  main.cpp
src/core/: input.cpp  input.hpp  logger.cpp  logger.hpp  window.cpp  window.hpp
src/renderer/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  command_buffers.cpp  command_buffers.hpp  command_pool.cpp  command_pool.hpp  context.cpp  context.hpp  font.cpp  font.hpp  image_views.cpp  image_views.hpp  instance.cpp  instance.hpp  logical_device.cpp  logical_device.hpp  model_loader.hpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  pipeline.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp  sync_objects.cpp  sync_objects.hpp  texture.cpp  texture.hpp  ubo.hpp  vertex.hpp
src/renderer/utils/: utils.hpp
src/ui/: context.cpp  context.hpp  layout_manager.cpp  layout_manager.hpp  panel.hpp  text.hpp  vertex.hpp  widget.hpp
